syntax = "proto3";

package sum; 

message Addition {
	int32 first = 1;
	int32 second = 2;
}

message SumRequest {
	Addition sum = 1; 
}

message SumResponse {
	int32 result = 1;
}


service SumService {
	rpc Sum (SumRequest) returns (SumResponse){}
}